Fixed bug causing incorrect scrollbar border colour when system is dark theme & website is forcing light mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,7 +47,7 @@ border: 3px solid #EFF4F7;
 }
 
 @media (prefers-color-scheme: dark) {
-  *::-webkit-scrollbar-thumb {
+  .dark ::-webkit-scrollbar-thumb {
     background: #526e78;
     border-radius: 1rem;
     border: 3px solid #18181b;
